Fix: token icons in dark mode (#465)

--- a/src/components/balances/AssetsTable/styles.module.css
+++ b/src/components/balances/AssetsTable/styles.module.css
@@ -7,8 +7,8 @@
   opacity: 1;
 }
 
-.alignCenter {
+.token {
   display: flex;
   align-items: center;
-  gap: 4px;
+  gap: var(--space-1);
 }
